--- a/src/azdo/package.json
+++ b/src/azdo/package.json
@@ -10,24 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "azure-devops-extension-api": "^4.254.0",
+    "azure-devops-extension-api": "^4.234.0",
     "azure-devops-extension-sdk": "^4.0.2",
-    "azure-devops-ui": "^2.257.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "azure-devops-ui": "^2.251.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/react": "^16.8.1",
     "@types/react-dom": "^16.8.1",
-    "@vitejs/plugin-react": "^4.5.2",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.29.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.2.0",
-    "sass-embedded": "^1.89.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "globals": "^15.14.0",
+    "sass-embedded": "^1.85.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "^7.0.0"
+    "vite": "^6.1.0"
   }
 }
