show all pull requests

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,7 +14,7 @@
 			"problemMatcher": "$msCompile",
 			"presentation": {
 				"clear": true,
-				"reveal": "silent"
+				"reveal": "always"
 			}
 		}
 	]
